# django-gerente

./: .gitignore  .gitlab-ci.yml  Justfile  LICENSE  MANIFEST.in  README.rst  pyproject.toml  ruff.toml
.github/workflows/: main.yml
src/django_gerente/: __main__.py
tests/: conftest.py
