[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77"]

[project]
name = "django-gerente"
version = "0.0.2"
description = "A reusable App for serious big Django projects that don't take themselves too seriously."
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["django"]
classifiers = [
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = ["css-inline>=0.14.6", "Django>=4.2,<5.2"]

[dependency-groups]
dev = ["pytest", "pytest-django"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = ["--tb=short", "--disable-warnings", "-p no:warnings"]
